<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout android:layout_width="@dimen/push_popup_width"
                  android:layout_height="wrap_content"
                  android:background="@drawable/popupwindow_back"
                  android:orientation="vertical">
        <TextView
            android:id="@+id/pp_program_push"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            android:text="@string/push"
            android:textColor="@drawable/popupwindow_textcolor_click"
            android:textSize="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/pp_preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            android:textColor="@drawable/popupwindow_textcolor_click"
            android:text="@string/preview"
            android:textSize="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/pp_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:textColor="@drawable/popupwindow_textcolor_click"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="16dp"/>
    </LinearLayout>

</LinearLayout>