<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="60dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLine"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentStart="true">

        <com.rey.material.widget.Button
            android:id="@+id/btn_day_task_program_name"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/click_add_program"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textSize="18dp"
            android:singleLine="true"
            app:v_styleId="@array/button_raise"/>

        <com.rey.material.widget.Button
            android:id="@+id/btn_day_task_start_time"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/click_add_start_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textSize="18dp"
            app:v_styleId="@array/button_raise"/>
        <com.rey.material.widget.Button
            android:id="@+id/btn_day_task_stop_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/click_add_stop_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textSize="18dp"
            app:v_styleId="@array/button_raise"/>
    </LinearLayout>

</RelativeLayout>