<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
    >

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog1_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:gravity="center"
            android:text="@string/change_nick_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_title_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <EditText
                android:id="@+id/et_original_password"
                android:layout_width="170dp"
                android:layout_height="33dp"
                android:background="@null"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/original_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dialog_content_size"/>

            <View
                android:layout_width="150dp"
                android:layout_height="1px"
                android:background="@color/colorLine"
                />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="170dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dialog_content_size"/>

            <View
                android:layout_width="150dp"
                android:layout_height="1px"
                android:background="@color/colorLine"
                />

            <EditText
                android:id="@+id/et_new_password_confirm"
                android:layout_width="170dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/new_password_confirm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dialog_content_size"/>

            <View
                android:layout_width="150dp"
                android:layout_height="1px"
                android:layout_marginBottom="15dp"
                android:background="@color/colorLine"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"
            />

        <Button
            android:id="@+id/btn_change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_bottom_height"
            android:background="@drawable/dialog_button_pre_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#000"
            android:textSize="16dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog1_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/close_dialog"
        android:visibility="gone"/>
</RelativeLayout>